--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "sass": "^1.70.0",
+    "styled-components": "^6.1.8",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
